test/expected/en_ns_c.out
namespace E { class C; }
          ^
11: error: "E" was previously declared as "enum" ("enum E")
